--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -95,6 +95,34 @@ nav #menu-items.active a{
     width: 100%;
 }
 
+nav #menu-items.active {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 85%;
+    height: 22vh;
+    display: block;
+    animation: fade .5s;
+    background-color: #231f20;
+    opacity: 1;
+    padding: 10px;
+    z-index: 5;
+    line-height: 25px;   
+}
+
+/* shop - subcategories */
+#shop_subcategories {
+    list-style-type: none;
+    position: absolute;
+    top: 52px;
+    left: 70px;
+    background-color: #ffffff;
+    padding: 10px 65px 10px 20px;
+    line-height: 30px;
+    font-size: 14px;
+    display: none;
+}
+
  #hamburger {
     margin: 0;
     margin-left: 15px;
@@ -133,23 +161,17 @@ nav #menu-items.active a{
     transform: translateY(-11px) rotate(-45deg);
   }
 
-nav #menu-items.active {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 85%;
-    height: 22vh;
-    display: block;
-    animation: fade .5s;
-    background-color: #231f20;
-    opacity: 1;
-    padding: 10px;
-    z-index: 5;
-    line-height: 25px;
-    
-}
-
-
+  .arrow {
+      border: solid black;
+      border-width: 0 3px 3px 0;
+      display: inline-block;
+      padding: 3px 3px 3px 3px;
+      transform: rotate(45deg);
+      margin-left: 5px;
+      position: absolute;
+      top: 33px;
+      
+  }
 
 /* main */
 /* hero-section */
@@ -159,7 +181,7 @@ nav #menu-items.active {
     height: 45vh;
     width: 100%;
     margin: 0 auto;
-    margin-top: -20px;
+    margin-top: -31px;
     margin-bottom: 8px;
 }
 
@@ -398,15 +420,25 @@ footer h3 {
         left: 230px;
     }
 
+    .nav-wrapper {
+        height: 150px;
+    }
+
     #nav__user-bereich img{
         width: 35px;
     }
 
     #nav__user-bereich .user-icon {
         width: 30px;
+        
     }
 
     /* hero-section */
+
+    .hero-section {
+        margin-bottom: -5.5px;
+    }
+
     .hero-section__hook {
         position: absolute;
         left: 75%;
@@ -421,7 +453,11 @@ footer h3 {
         background-size: 2500px 2115px;
         text-align: center;
         padding: 32px 0;
-        margin-top: 16px;
+        margin-top: 1px;
+    }
+
+    .special-selection .special-selection__header {
+        font-size: 22px;
     }
 
     .special-selection__beers {
@@ -435,7 +471,6 @@ footer h3 {
     .advertising {
         display: flex;
         gap: 16px;
-        padding-top: 8px;
     }
     .ads__right {
         margin-top: 0;
@@ -444,6 +479,7 @@ footer h3 {
     .awards {
         flex-direction: row;
         justify-content: space-evenly;
+        padding-bottom: 16px;
     }
 
     .awards__group {
@@ -481,6 +517,7 @@ footer h3 {
         width: 100%;
         height: 16vh;
         display: flex;
+        gap: 10px;
     }
 
     .nav__logo img {
@@ -521,9 +558,34 @@ footer h3 {
         height: 100%;
         align-self: center;
     }
+
+    /* shop-subcategories */
+    #shop_subcategories.active {
+        display: block;
+        position: absolute;
+        left: 50px;
+    }
+
+    .arrow {
+        position: absolute;
+        top: 15px;
+    }
+
+    .shop_subcategory {
+        color: var(--main-text-color);
+        text-decoration: none;
+        transition: .5s ease;
+    }
+    
+    .shop_subcategory:hover {
+        color: darkgray;
+        transition: .5ms;
+    }
+
     /* hero-section */
     .hero-section {
         height: 70vh;
+        margin-bottom: -10px;
     }
 
     .hero-section h1 {
@@ -563,7 +625,7 @@ footer h3 {
     .advertising {
         display: flex;
         gap: 16px;
-        padding-top: 8px;
+        padding: 20px 10px;
     }
     .ads__right {
         margin-top: 0;
@@ -595,10 +657,20 @@ footer h3 {
         width: 220px;
     }
 
+    #shop_subcategories.active {
+        position: absolute;
+        left: 75px;
+    }
+
+    .arrow {
+        position: absolute;
+        top: 17px;
+    }
+
     .hero-section {
-        background: center center no-repeat url(../images/Meerjungfrau_Genuss_07_CL7_4722.svg);
-        background-size: cover;
+        background: center center no-repeat cover url(../images/Meerjungfrau_Genuss_07_CL7_4722.svg);
         height: 80vh;
+        margin-bottom: 5px;
     }
 
     .hero-section__hook {
@@ -608,6 +680,17 @@ footer h3 {
     .hero-section__bg {
         background-position: bottom 45px left -15px;
         background-size: 350px;
+    }
+
+    .special-selection {
+        background:center center no-repeat url(../images/beer_range_bg.svg);
+        background-size: 1550px 2200px;
+        text-align: center;
+        padding: 32px 0;
+    }
+
+    .advertising {
+        padding: 120px 280px;
     }
 
     .awards {
@@ -623,14 +706,26 @@ footer h3 {
     }
 
     .logo_socials .company_logo {
-        width: 180px;
+        width: 200px;
+        text-align: center;
     }
 
     .logo_socials .socials{
         width: 200px;
     }
 
+    .newsletter input {
+        background-color: #231f20;
+        border: 1px solid #ffff;
+        border-radius: 3px;
+        padding: 3px 0 3px 5px;
+    }
+
+    .newsletter-cta {
+        margin-top: 3px;
+    }
+
     .newsletter h3 {
-        padding-bottom: 25px;
+        padding-bottom: 10px;
     }
 }
