--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -789,6 +789,11 @@ footer {
 
         .contact-form{
             width: 60%;
+            margin-left: 300px;
+
+            input, textarea {
+                width: 80%;
+            }
 
             .submit {
                 width: 50%;
