Contact-Form kein page-refresh und via ajax implementiert

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -443,6 +443,11 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 8px;
+  /* span {
+                #status {
+                    color: green;
+                } 
+            } */
 }
 
 /* Footer */
@@ -848,7 +853,7 @@ footer .newsletter .newsletter__interaction .newsletter-cta {
   }
   .contact_us .contact-form {
     width: 60%;
-    margin-left: 300px;
+    margin-left: 250px;
   }
   .contact_us .contact-form input, .contact_us .contact-form textarea {
     width: 80%;
@@ -929,6 +934,7 @@ footer .newsletter .newsletter__interaction .newsletter-cta {
   }
   .contact_us .contact-form {
     width: 60%;
+    margin-left: 300px;
   }
   .contact_us .contact-form .submit {
     width: 50%;
