--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -410,6 +410,12 @@ body {
             display: flex;
             flex-direction: column;
             gap: 8px;
+
+            /* span {
+                #status {
+                    color: green;
+                } 
+            } */
         }
     }
 }
@@ -789,7 +795,7 @@ footer {
 
         .contact-form{
             width: 60%;
-            margin-left: 300px;
+            margin-left: 250px;
 
             input, textarea {
                 width: 80%;
@@ -875,6 +881,7 @@ footer {
 
             .contact-form{
                 width: 60%;
+                margin-left: 300px;
                 
                 .submit {
                     width: 50%;
